--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,11 +22,11 @@ else()
 endif()
 function(add_shader FILE)
     set(DEPENDS ${ARGN})
-    set(GLSL ${CMAKE_SOURCE_DIR}/res/shaders/${FILE})
-    set(SPV ${CMAKE_SOURCE_DIR}/res/shaders/bin/${FILE}.spv)
-    set(DXIL ${CMAKE_SOURCE_DIR}/res/shaders/bin/${FILE}.dxil)
-    set(MSL ${CMAKE_SOURCE_DIR}/res/shaders/bin/${FILE}.msl)
-    set(JSON ${CMAKE_SOURCE_DIR}/res/shaders/bin/${FILE}.json)
+    set(GLSL ${CMAKE_SOURCE_DIR}/${FILE})
+    set(SPV ${CMAKE_SOURCE_DIR}/bin/${FILE}.spv)
+    set(DXIL ${CMAKE_SOURCE_DIR}/bin/${FILE}.dxil)
+    set(MSL ${CMAKE_SOURCE_DIR}/bin/${FILE}.msl)
+    set(JSON ${CMAKE_SOURCE_DIR}/bin/${FILE}.json)
     function(_add_shader PROGRAM SOURCE OUTPUT)
         if(MSVC)
             add_custom_command(
@@ -55,6 +55,9 @@ function(add_shader FILE)
     _add_shader(${SHADERCROSS} ${SPV} ${MSL})
     _add_shader(${SHADERCROSS} ${SPV} ${JSON})
 endfunction()
+add_shader(render.frag)
+add_shader(render.vert)
+add_shader(update.comp)
 
 file(COPY LICENSE.txt DESTINATION ${BINARY_DIR})
 file(COPY README.md DESTINATION ${BINARY_DIR})
